Fixed backgrounds and wrapped animation in forEach loops

--- a/app/assets/styles/base/_utility-classes.css
+++ b/app/assets/styles/base/_utility-classes.css
@@ -2,12 +2,6 @@
 .spacer {
     min-height: 350px;
 }
-.relative {
-    position: relative;
-}
-.hide {
-    display: none;
-}
 .temp-block {
     padding: 10rem;
     display: flex;
@@ -18,7 +12,81 @@
 /* TEMP STUFF */
 
 
+
+.mr-logo {
+    max-height: 100px;
+    transition: .8s ease-in-out;
+    display: flex;
+    justify-content: center;
+}
+.r-letter {
+    fill: #c2e0ff;
+    filter: url(#drop-shadow-2);
+}
+.mr-triangle {
+    fill: #6d4af9;
+    filter: url(#drop-shadow-1);
+    transition: .3s ease-in-out;
+}
+.mr-logo:hover .mr-triangle {
+    transform-origin: 0 50%;
+    transform: translateY(-5px) translateX(570px) rotate(180deg) scale(.55);
+    transition: .3s ease-in-out;
+}
+
+
+//background global styles
+.img-bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+.bg-video {
+    z-index: -1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+    @mixin laptop-small {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        object-fit: unset;
+    }
+}
+.content-wrapper:after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    background: $siteBg;
+    opacity: .95;
+    z-index: -1;
+
+    @mixin tablet {
+        opacity: .95;
+    }
+}
+
+
 /* Reusable Classes */
+.relative {
+    position: relative;
+}
+.hide {
+    display: none;
+}
 .wrapper {
     padding: 2.5rem;
 
@@ -41,11 +109,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-
-.hide {
-    display:none;
 }
 .link-active {
     color: $midBlue;
@@ -74,7 +137,6 @@
     object-position: bottom;
 }
 
-
 .anim-underline:after{
     content: "";
     background-color: $midBlue;
@@ -89,24 +151,3 @@
     width: 100%;
 }
 
-
-.mr-logo {
-    max-height: 100px;
-    transition: .8s ease-in-out;
-    display: flex;
-    justify-content: center;
-}
-.r-letter {
-    fill: #c2e0ff;
-    filter: url(#drop-shadow-2);
-}
-.mr-triangle {
-    fill: #6d4af9;
-    filter: url(#drop-shadow-1);
-    transition: .3s ease-in-out;
-}
-.mr-logo:hover .mr-triangle {
-    transform-origin: 0 50%;
-    transform: translateY(-5px) translateX(570px) rotate(180deg) scale(.55);
-    transition: .3s ease-in-out;
-}
