--- a/app/assets/styles/modules/_home-page.css
+++ b/app/assets/styles/modules/_home-page.css
@@ -1,45 +1,3 @@
-.img-bg {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-}
-
-.content-wrapper:after {
-    content: '';
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: $siteBg;
-    opacity: .95;
-    z-index: -1;
-
-    @mixin tablet {
-        opacity: .95;
-    }
-}
-.bg-video {
-    z-index: -1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-
-    @mixin laptop-small {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100vh;
-        object-fit: unset;
-    }
-}
 
 /* Hero Section */
 .hero {
