--- a/app/assets/styles/modules/_portfolio-page.css
+++ b/app/assets/styles/modules/_portfolio-page.css
@@ -1,5 +1,3 @@
-
-
 .portfolio-hero {
   max-width: 1300px;
   margin: auto;
@@ -94,12 +92,12 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-    }
 
-    #astonished svg {
-      max-height: 100px;
-      display: block;
-      margin-bottom: 3.5rem;
+      .lottie-astonished svg {
+        max-height: 100px;
+        display: block;
+        margin-bottom: 3.5rem;
+      }
     }
   }
 
